# chitchats

./: +not-found.html  .env.local.example  .gitignore  .vercelignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STRATEGY.md  MIGRATION_SUMMARY.md  README-DEPLOY.md  README.md  _sitemap.html  app.config.js  app.json  conversation.html  global.css  index.html  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  polyfills.ts  standalone-web.html  test-local.html  utils.ts  vercel.json
.github/workflows/: deploy-gh-pages.yml  deploy-with-rollback.yml  simple-ci.yml
android/: settings.gradle
android/app/: build.gradle
api/: generate-token.js  health.js  speechmatics-token.js
app/: _layout.tsx  conversation.native.tsx  conversation.tsx  conversation.web.tsx  index.tsx  index.web.tsx
app/(tabs)/: _layout.tsx  conversation.native.tsx  conversation.tsx  index.tsx
app/api/: livekit-token+api.ts
dialogue/: README.md  api_server.py  deploy_modal.md  main.py  modal_agent.py  pyproject.toml  run.py
hooks/: useSpeechmaticsTranscription.ts
ios/: Podfile
ios/blablabla/: Info.plist
ios/blablabla.xcodeproj/: project.pbxproj
ios/blablabla.xcworkspace/: contents.xcworkspacedata
scripts/: blue-green-deployment.sh  deploy-vercel.sh  deploy-web.sh  emergency-rollback.sh  fix-base-path.js  migrate-dependencies.sh  post-deployment-validation.js  pre-migration-backup.sh  test-gh-pages.sh
supabase/: config.toml
supabase/functions/: .env
tests/cross-platform/: browser-matrix.js  comprehensive-cross-platform-tests.js  (+1 more)
(+23 files in other folders)
